// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeagleErrorComponent - empty should match snapshot 1`] = `
<beagle-error
  errors={[Function Array]}
  retry={[Function Function]}
  showingDetails="false"
  toggleDetails={[Function Function]}
>
  <beagle-text
    text="Sorry!"
    textcolor="red"
  >
    <p
      class="beagle-text"
      style="color: red; text-align: inherit;"
    >
      Sorry!
    </p>
  </beagle-text><beagle-text
    text="An unexpected error happened while loading your page."
  >
    <p
      class="beagle-text"
      style="text-align: inherit;"
    >
      An unexpected error happened while loading your page.
    </p>
  </beagle-text><beagle-button
    class="retry-button"
    text="Retry"
  >
    <button
      aria-disabled="false"
      type="button"
    >
       Retry
  
    </button>
  </beagle-button>
</beagle-error>
`;

exports[`BeagleErrorComponent - with errors should match snapshot 1`] = `
<beagle-error
  errors={[Function Array]}
  retry={[Function Function]}
  showingDetails="false"
  toggleDetails={[Function Function]}
>
  <beagle-text
    text="Sorry!"
    textcolor="red"
  >
    <p
      class="beagle-text"
      style="color: red; text-align: inherit;"
    >
      Sorry!
    </p>
  </beagle-text><beagle-text
    text="An unexpected error happened while loading your page."
  >
    <p
      class="beagle-text"
      style="text-align: inherit;"
    >
      An unexpected error happened while loading your page.
    </p>
  </beagle-text><beagle-button
    class="retry-button"
    text="Retry"
  >
    <button
      aria-disabled="false"
      type="button"
    >
       Retry
  
    </button>
  </beagle-button><beagle-button
    class="show-details-button"
  >
    <button
      aria-disabled="false"
      type="button"
    >
       Show details ▼
  
    </button>
  </beagle-button><section
    class="errors-detailed-container"
  >
    
    <p
      class="error-message"
    >
      <span
        class="error-indicator"
      >
        ►
      </span>
       ERROR: First Message 
    </p>
    <p
      class="error-message"
    >
      <span
        class="error-indicator"
      >
        ►
      </span>
       ERROR: Second Message 
    </p>
  </section>
</beagle-error>
`;
